支持自动下载兼容的 Mod
