# docs/swagger.json
@@ -115,6 +115,12 @@
                 "summary": "更新 Mods",
                 "parameters": [
                     {
+                        "type": "string",
+                        "description": "[ true | false ]",
+                        "name": "update_mod_info",
+                        "in": "query"
+                    },
+                    {
                         "description": "body",
                         "name": "body",
                         "in": "body",
@@ -198,6 +204,45 @@
                             "items": {
                                 "type": "string"
                             }
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/comm.RespOk"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/comm.RespErr"
+                        }
+                    }
+                }
+            }
+        },
+        "/tmodloader/mod/mod_id": {
+            "post": {
+                "consumes": [
+                    "text/plain"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "tmodloader"
+                ],
+                "summary": "通过 Mod ID 添加 Mods",
+                "parameters": [
+                    {
+                        "description": "多个 Mod ID 一行一个",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
                         }
                     }
                 ],
